--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "server": "json-server --watch db.json --port 5000",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,8 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.2",
     "next": "^15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -32,6 +35,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
